// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picture should render a picture tag 1`] = `
<IntersectionObserver
  onChange={[Function]}
>
  <picture>
    <source
      data-srcset={null}
      key="sources-0"
      srcSet="image.webp"
      type="image/webp"
    />
    <source
      data-srcset={null}
      key="sources-1"
      srcSet="image.png"
      type="image/png"
    />
    <img
      alt=""
      data-src={null}
      style={
        Object {
          "filter": "blur(10px) grayscale(0) opacity(1)",
          "transition": "filter 750ms ease",
        }
      }
    />
  </picture>
</IntersectionObserver>
`;

exports[`Picture should render a picture tag with placeholders 1`] = `
<IntersectionObserver
  onChange={[Function]}
>
  <picture>
    <source
      data-srcset="image.webp"
      key="sources-0"
      srcSet="image-placeholder.webp"
      type="image/webp"
    />
    <source
      data-srcset="image.png"
      key="sources-1"
      srcSet="image-placeholder.png"
      type="image/png"
    />
    <img
      alt=""
      data-src={null}
      style={
        Object {
          "filter": "blur(10px) grayscale(0) opacity(1)",
          "transition": "filter 750ms ease",
        }
      }
    />
  </picture>
</IntersectionObserver>
`;

exports[`Picture should render an img tag 1`] = `
<IntersectionObserver
  onChange={[Function]}
>
  <img
    alt=""
    data-src={null}
    style={
      Object {
        "filter": "blur(10px) grayscale(0) opacity(1)",
        "transition": "filter 750ms ease",
      }
    }
  />
</IntersectionObserver>
`;

exports[`Picture should render an img tag with a placeholder 1`] = `
<IntersectionObserver
  onChange={[Function]}
>
  <img
    alt=""
    data-src="image.jpg"
    src="image-placeholder.jpg"
    style={
      Object {
        "filter": "blur(10px) grayscale(0) opacity(1)",
        "transition": "filter 750ms ease",
      }
    }
  />
</IntersectionObserver>
`;

exports[`Picture should render other props 1`] = `
<IntersectionObserver
  onChange={[Function]}
>
  <img
    alt="That's nice"
    className="my-img-selector"
    data-src={null}
    id="test"
    style={
      Object {
        "filter": "blur(10px) grayscale(0) opacity(1)",
        "transition": "filter 750ms ease",
      }
    }
    width="128"
  />
</IntersectionObserver>
`;
